orb/kustomize/orb/overlays/local/testnet/service.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: testnet
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http-port
  selector:
    app: orb
status:
  loadBalancer: {}
---
