orb/kustomize/orb/overlays/local/testnet/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testnet
spec:
  tls:
  - hosts:
      - testnet.||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: testnet.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: testnet
            port:
              name: http
